--- a/.travis.yml
+++ b/.travis.yml
@@ -17,14 +17,14 @@ deploy:
   region: af-south-1
   app: "docker-react"
   env: "DockerReact-env"
-  bucket_name: "arn:aws:s3:::elasticbeanstalk-af-south-1-046272106737"
+  bucket_name: "elasticbeanstalk-af-south-1-046272106737"
   bucket_path: "docker-react"
   on:
   # Only trigger the build process when deployed to the master branch
     branch: master
-  access_key_id: "$AWS_ACCESS_KEY"
+  access_key_id: $AWS_ACCESS_KEY
   secret_access_key: 
-    secure: "$AWS_SECRET_KEY"
+    secure: $AWS_SECRET_KEY
 
 # After all is successfull run this script to push to docker hub
 # after_success:
