--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,9 @@ deploy:
   on:
   # Only trigger the build process when deployed to the master branch
     branch: master
-  access_key_id: $AWS_ACCESS_KEY
+  access_key_id: "$AWS_ACCESS_KEY"
   secret_access_key: 
-    secure: $AWS_SECRET_KEY
+    secure: "$AWS_SECRET_KEY"
 
 # After all is successfull run this script to push to docker hub
 # after_success:
