--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,10 @@ deploy:
   provider: elasticbeanstalk
   # choos the region where deployed your elastic beanstal region
   region: af-south-1
-  app: "docker-react"
-  env: "DockerReact-env"
+  app: docker_react"
+  env: "DockerReact-env-1"
   bucket_name: "elasticbeanstalk-af-south-1-046272106737"
-  bucket_path: "docker-react"
+  bucket_path: docker_react"
   on:
   # Only trigger the build process when deployed to the master branch
     branch: master
